[package]
name = "adaptors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.10.0"
embedded-graphics = "0.7"
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }